base/src/test/resources/failure/holes/scope-check.aya.txt
In file $FILE:13:46 ->

  11 | 
  12 | -- https://cstheory.stackexchange.com/a/49160/50892
  13 | def test (a : _) (B : Type) (b : B) (p : Eq a b) : I => 0
                                                     ^^

Error: The solution
         B
       is not well-scoped
       In particular, these variables are not in scope: `B`

In file $FILE:13:14 ->

  11 | 
  12 | -- https://cstheory.stackexchange.com/a/49160/50892
  13 | def test (a : _) (B : Type) (b : B) (p : Eq a b) : I => 0
                     ^^

Error: Unsolved meta _

In file $FILE:13:14 ->

  11 | 
  12 | -- https://cstheory.stackexchange.com/a/49160/50892
  13 | def test (a : _) (B : Type) (b : B) (p : Eq a b) : I => 0
                     ^^

Error: Unsolved meta _
       in `Eq {_} a b`

3 error(s), 0 warning(s).
What are you doing?
